--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,26 +3,25 @@
     <title>reCAPTCHA demo: Simple page</title>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   </head>
-  <body>
-    <form action="/verify/userID=<%= req.query.guildID %>&userID=<%= req.query.userID %>" method="POST">
+  <body style="background-color:#2c2f33">
+    <form action="/verify?guildID=<%= guildID %>&userID=<%= userID %>" method="POST" id="verificationForm">
       <div class="g-recaptcha" data-sitekey="6Ld1kqwZAAAAABIYvytLgggmmvOZFVD4cPvUfveq"></div>
       <br/>
       <input type="button" value="Submit" onclick="c()">
       
 <script src="https://www.google.com/recaptcha/api.js?render=6Lc0kawZAAAAAKDgUKYFqgY0QKFLvcluldSI3PUf"></script>
 <script> 
-function label() {
-  
-}
+
   function c(){
 var response = grecaptcha.getResponse();
   console.log(response)
 if(response.length == 0) return alert("not verified")
-else return alert("verified")
+else document.getElementById("verificationForm").submit();
     //reCaptch verified
   }
   
 </script>
+        
       
     </form>
   </body>
