--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,13 @@
     <p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; color: white; font-size: 30px">
       Smart CAPTCHA
     </p>
+    <div style="background-color: rgba(240,71,71,.3);
+    border:1px solid #f04747;
+    border-radius: 3px;
+      margin: 12px 0;
+    padding: 12px; color:white; width: 7rem; text-align: center">
+      Invalid CAPTCHA
+    </div>
   </head>
   <body style="background-color:#2c2f33">
     <form action="/verify?guildID=<%= guildID %>&userID=<%= userID %>" method="POST" id="verificationForm">
