--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,27 +7,29 @@
     <p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; color: white; font-size: 30px">
       Smart CAPTCHA
     </p>
-    <div style="background-color: rgba(240,71,71,.3);
-    border:1px solid #f04747;
-    border-radius: 3px;
-      margin: 12px 0;
-    padding: 12px; color:white; width: 7rem; text-align: center">
-      Invalid CAPTCHA
-    </div>
+  
   </head>
   <body style="background-color:#2c2f33">
     <form action="/verify?guildID=<%= guildID %>&userID=<%= userID %>" method="POST" id="verificationForm">
       <div class="g-recaptcha" data-sitekey="6Ld1kqwZAAAAABIYvytLgggmmvOZFVD4cPvUfveq"></div>
+      </p>
+    
       <br/>
       <input type="button" value="Submit" onclick="c()">
-      
+      <div id="error" style="display:none; background-color: rgba(240,71,71,.3);
+    border:1px solid #f04747;
+    border-radius: 3px;
+      margin: 12px 0;
+    padding: 12px; color:white; width: 10rem; text-align: center">
+      Invalid CAPTCHA
+    </div>
 <script src="https://www.google.com/recaptcha/api.js?render=6Lc0kawZAAAAAKDgUKYFqgY0QKFLvcluldSI3PUf"></script>
 <script> 
 
   function c(){
 var response = grecaptcha.getResponse();
   console.log(response)
-if(response.length == 0) return alert("not verified")
+if(response.length == 0) return document.getElementById("error").style.display = "block"
 else document.getElementById("verificationForm").submit();
     //reCaptch verified
   }
